# pcta

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/: README.md
.github/workflows/: ci.yml
pcta/: __init__.py  compose.py  constants.py  tensor.py
tests/: test_compose.py  test_constants.py
